# article_sitri_vault_pydantic

./: .env.example  .env.local  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  config.json  docker-compose.yml  pyproject.toml
superapp/: __main__.py  main.py
superapp/config/: __init__.py  app_settings.py  database_settings.py  faust_settings.py  kafka_settings.py  provider_config.py
